[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/player/player.gd" type="Script" id=1]
[ext_resource path="res://resources/icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31.7337, 31.8681 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 31.725, 0.878845 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 1.11816, 31.838 )

[node name="player" type="KinematicBody2D" index="0"]

position = Vector2( 960, 540 )
scale = Vector2( 0.75, 0.75 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
SPEED = 10
GRAVITY = 1200
AIR_ACCELERATION = 0.8
MAX_SPEED = 600
SLOW_DOWN_SPEED = 500.0
JUMP_HEIGHT = 800
MAX_ACCELERATION = 40
ACCELERATION_MULTIPLIER = 8.0

[node name="player_sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="player_rect" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="collisions" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="collision_ground" type="Area2D" parent="collisions" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisions/collision_ground" index="0"]

position = Vector2( 0, 33 )
shape = SubResource( 2 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="collision_top" type="Area2D" parent="collisions" index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisions/collision_top" index="0"]

position = Vector2( 0, -33 )
shape = SubResource( 2 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="collision_right" type="Area2D" parent="collisions" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisions/collision_right" index="0"]

position = Vector2( 33, 0 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="collision_left" type="Area2D" parent="collisions" index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisions/collision_left" index="0"]

position = Vector2( -33, 0 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="." index="3"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.4, 0.4 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = true
editor_draw_drag_margin = true
_sections_unfolded = [ "Editor", "Smoothing" ]


